store and partial group attack component refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    "types": ["vitest/globals"],
+    "types": ["vitest/globals", "@testing-library/jest-dom", "vite/client"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
